test/visibility/rename/renameUsedMod/renamePrivateUse2.good
renamePrivateUse2.chpl:12: In function 'main':
renamePrivateUse2.chpl:15: error: 'F' undeclared (first use this function)
